feat(msc-billing-tile): translations logic
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/src/index.html
+++ b/packages/super-components/components/msc-billing-tile/src/index.html
@@ -11,7 +11,11 @@
     </head>
     <body>
         <section
-            style="display: grid; grid-gap: 30px; grid-template-columns: repeat(3, 1fr);"
+            style="
+                display: grid;
+                grid-gap: 30px;
+                grid-template-columns: repeat(3, 1fr);
+            "
         >
             <!-- NAS-HA service -->
             <msc-billing-tile
@@ -23,6 +27,7 @@
             <!-- VPS service -->
             <msc-billing-tile
                 offer="vps-0baa4fcf.vps.ovh.net"
+                language="en-GB"
                 data-tracking="home:dashboard:product"
             >
             </msc-billing-tile>
