--- a/packages/manager/apps/telecom/src/components/telecom/telephony/alias/liveCalls/live-calls.html
+++ b/packages/manager/apps/telecom/src/components/telecom/telephony/alias/liveCalls/live-calls.html
@@ -79,11 +79,11 @@
     <oui-datagrid data-rows="$ctrl.calls">
         <oui-datagrid-column
             data-title="'telephony_alias_configuration_mode_calls_number' | translate"
-            data-property="callerIdNumber"
+            data-property="callerIdName"
         >
             <span
                 class="text-capitalize"
-                data-ng-bind="$row.callerIdNumber | tucPhoneNumber"
+                data-ng-bind="$row.callerIdName | tucPhoneNumber"
             ></span>
         </oui-datagrid-column>
         <oui-datagrid-column
