--- a/packages/super-components/components/msc-billing-tile/src/index.html
+++ b/packages/super-components/components/msc-billing-tile/src/index.html
@@ -19,13 +19,15 @@
         >
             <!-- NAS-HA service -->
             <msc-billing-tile
-                offer="zpool-128875"
+                service-path="dedicated/nasha/zpool-128894"
+                offer="zpool-128894"
                 data-tracking="home:dashboard:tuto"
             >
             </msc-billing-tile>
 
             <!-- VPS service -->
             <msc-billing-tile
+                service-path="vps/vps-0baa4fcf.vps.ovh.net"
                 offer="vps-0baa4fcf.vps.ovh.net"
                 language="en-GB"
                 data-tracking="home:dashboard:product"
