fix(web.hosting): fix flex label offer on upgrade offer
ref: MANAGER-11765

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
+++ b/packages/manager/apps/web/client/app/components/hosting-domain-offers/template.html
@@ -12,7 +12,9 @@
         data-on-change="$ctrl.onGroupOfferClick({groupOffer, versionOffer: null})"
     >
         <!--Offer picker header-->
-        <oui-select-picker-label class="w-100 d-flex justify-content-between">
+        <oui-select-picker-label
+            class="w-100 d-flex flex-wrap justify-content-between"
+        >
             <!--Offer name-->
             <p
                 class="font-weight-bold"
