feat(generator): add bootstrap 5 in generator
ref: MANAGER-11537

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/conditional-templates/api/services-template.ts.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/api/services-template.ts.hbs
@@ -33,7 +33,7 @@ export const {{this.functionName}} = async ({{#if this.params}}params: {{pascalC
       console.error('Error with request', errorResponse);
       return errorResponse;
     }
-    return response.data;
+    return { ...response.data, status: response?.status };
   };
 
   return queryClient.fetchQuery({{this.functionName}}QueryKey{{#if this.urlParams}}(params){{/if}}, fetchData);
