--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -29,6 +29,7 @@
     "@ovhcloud/ods-theming": "^14.0.1",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.9.0",
+    "bootstrap": "^5.3.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-i18next": "^11.18.1",
