--- a/packages/manager/core/generator/app/templates/src/components/Error/error.scss
+++ b/packages/manager/core/generator/app/templates/src/components/Error/error.scss
@@ -1,16 +1,20 @@
 .manager-error-page {
   margin-left: auto;
   margin-right: auto;
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   display: grid;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 
-  div {
-    padding: 15px;
+  .manager-error-page-image {
+    img {
+      width: 100%;
+    }
   }
 
-  .buttons {
+  .manager-error-page-footer {
     text-align: right;
+    overflow: hidden;
   }
 }
