feat(pci): display banner only for freetrail voucher
 ref: MANAGER-11795

Signed-off-by: Anoop N <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/template.html
+++ b/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/template.html
@@ -1,4 +1,7 @@
-<div class="pci-new-project-promotion-banner" data-ng-if="$ctrl.voucher.valid">
+<div
+    class="pci-new-project-promotion-banner"
+    data-ng-if="$ctrl.isVoucherValid()"
+>
     <oui-tile class="promotion-banner">
         <h5
             data-translate="pci_project_promotion_banner_title"
