--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
@@ -15,7 +15,8 @@
     </div>
     <div
         class="d-inline-block"
-        data-ng-repeat="datacenter in ::$ctrl.datacentersState track by index"
+        data-ng-repeat="datacenter in ::$ctrl.datacentersState track by $index"
+        data-ng-if="datacenter.state === $ctrl.ACTIVATION_STATUS.enabled.name"
     >
         <span
             class="oui-badge oui-badge_info"
