--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
@@ -4,8 +4,7 @@
         type="button"
         class="btn btn-default mb-4"
         data-ng-if="$ctrl.dedicatedCloud.canOrderDatacenter"
-        data-ng-disabled="$ctrl.isNSXPcc"
-        data-ng-click="$ctrl.addDatacenter()"
+        data-ng-click="$ctrl.onAddDatacenterClick()"
         data-translate="dedicatedCloud_datacenters_add"
     ></button>
     <oui-message class="mb-3" type="info" data-ng-if="$ctrl.isNSXPcc">
