feat(iam): add guide tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
+++ b/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
@@ -24,6 +24,7 @@
             <oui-guide-menu-item
                 data-ng-repeat="guide in $ctrl.onboardingGuides track by $index"
                 data-href="{{:: guide.link }}"
+                data-on-click="$ctrl.onGuideClick(guide.key)"
                 data-external
             >
                 <span data-ng-bind=":: guide.title"></span>
