feat(iam): add onboarding tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/advancedModeSwitch/advancedModeSwitch.template.html
+++ b/packages/manager/modules/iam/src/components/advancedModeSwitch/advancedModeSwitch.template.html
@@ -2,7 +2,7 @@
     <oui-switch
         class="mr-1"
         data-model="$ctrl.advancedMode"
-        data-on-change="$ctrl.onChangeMode(modelValue)"
+        data-on-change="$ctrl.onAdvancedModeChanged(modelValue)"
     >
     </oui-switch>
     <span data-translate="iam_advanced_mode_switch_toggle_label"></span>
