feat(iam): add policy creation tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
+++ b/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
@@ -8,7 +8,7 @@
         <oui-switch
             data-name="wildcard"
             data-model="$ctrl.isWildcardActive"
-            data-on-change="$ctrl.onModelChanged()"
+            data-on-change="$ctrl.onIsWildcardActiveChanged(modelValue)"
             data-disabled="$ctrl.readOnly"
         ></oui-switch>
     </div>
