--- a/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
+++ b/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
@@ -142,6 +142,8 @@
             data-ng-model="$ctrl.model.actions"
             data-resource-types="$ctrl.model.resources.types"
             data-read-only="$ctrl.policy.readOnly"
+            data-track-click="$ctrl.trackClick"
+            data-track-page="$ctrl.trackPage"
         ></iam-action-select>
         <!-- </Actions> -->
 
