feat(msc-billing-tile): mock, storybook, fixes
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/src/index.html
+++ b/packages/super-components/components/msc-billing-tile/src/index.html
@@ -33,6 +33,15 @@
                 data-tracking="home:dashboard:product"
             >
             </msc-billing-tile>
+
+            <!-- domain name -->
+            <msc-billing-tile
+                service-path="domain/agora3.ovh"
+                offer="agora3.ovh"
+                language="en-GB"
+                data-tracking="home:dashboard:product"
+            >
+            </msc-billing-tile>
         </section>
         <script type="module">
             !window.ods &&
