fix(supercomponent): fix some rules inside supercomponents lib
ref: MANAGER-11577

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/super-components/generator/component/templates/src/index.html.hbs
+++ b/packages/super-components/generator/component/templates/src/index.html.hbs
@@ -6,7 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
         />
-        <title>Dev msc-tile</title>
+        <title>Dev msc-{{componentTag}}</title>
         <link rel="stylesheet" href="/build/{{ componentTag }}.css" />
     </head>
     <body>
