feat: add source and destination
DATATR-316

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/data-integration/tabs/dashboard/components/workflowsList/workflows-list.html
+++ b/packages/manager/modules/pci/src/projects/project/data-integration/tabs/dashboard/components/workflowsList/workflows-list.html
@@ -81,6 +81,11 @@
                     ></span>
                 </td>
                 <td class="oui-datagrid__cell">
+                    <span
+                        data-ng-bind="$ctrl.ovhManagerRegionService.getTranslatedMacroRegion(workflow.region)"
+                    ></span>
+                </td>
+                <td class="oui-datagrid__cell">
                     <oui-switch disabled="true" model="workflow.enabled">
                     </oui-switch>
                 </td>
