feat(iam): add resource group creation tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
+++ b/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
@@ -2,8 +2,10 @@
     <iam-delete-entity
         data-ng-if="$ctrl.deletion"
         data-entity="{ data: $ctrl.deletion.data, type: $ctrl.ENTITY_RESOURCE_TYPE }"
-        data-statement="false"
         data-go-back="$ctrl.onDeleteEntityGoBack"
+        data-statement="false"
+        data-tag-prefix=":: $ctrl.TAG.ADD_RESOURCE_GROUP"
+        data-track-click=":: $ctrl.trackClick"
     >
         <strong
             class="d-block"
