feat(iam): add resource group edition tracking
ref: MANAGER-10789
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
+++ b/packages/manager/modules/iam/src/components/createResourceGroup/createResourceGroup.template.html
@@ -4,7 +4,7 @@
         data-entity="{ data: $ctrl.deletion.data, type: $ctrl.ENTITY_RESOURCE_TYPE }"
         data-go-back="$ctrl.onDeleteEntityGoBack"
         data-statement="false"
-        data-tag-prefix=":: $ctrl.TAG.ADD_RESOURCE_GROUP"
+        data-tag-prefix=":: $ctrl.tag.prefix"
         data-track-click=":: $ctrl.trackClick"
     >
         <strong
