feat(msc-billing-tile): refactor menu, commitment, renewal
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/src/msc-billing-tile/msc-billing-tile.scss
+++ b/packages/super-components/components/msc-billing-tile/src/msc-billing-tile/msc-billing-tile.scss
@@ -10,6 +10,14 @@
     .menu-button {
       margin-left: 340px;
       position: absolute;
+
+      .tooltip {
+        background-color: white;
+      }
+
+      .tooltiplinks {
+        display: inline-grid;
+      }
     }
 
     .link-icon {
