--- a/packages/super-components/components/msc-billing-tile/src/index.html
+++ b/packages/super-components/components/msc-billing-tile/src/index.html
@@ -42,6 +42,14 @@
                 data-tracking="home:dashboard:product"
             >
             </msc-billing-tile>
+
+            <!-- Ended service -->
+            <msc-billing-tile
+                service-path="vps/vps-37eb1a5a.vps.ovh.net"
+                offer="vps-37eb1a5a.vps.ovh.net"
+                data-tracking="home:dashboard:tuto"
+            >
+            </msc-billing-tile>
         </section>
         <script type="module">
             !window.ods &&
