fix(telecom.voip): disable the time condition option on ccs expert
ref: DTRSD-91543

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/telecom/src/components/telecom/telephony/scheduler/filters/filters.html
+++ b/packages/manager/apps/telecom/src/components/telecom/telephony/scheduler/filters/filters.html
@@ -13,7 +13,7 @@
                 <voip-time-condition-slot
                     data-time-condition-slot="$ctrl.convertCategoryToSlot(category.value)"
                     data-has-popover="true"
-                    data-slot-enable-edition="true"
+                    data-slot-enable-edition="$ctrl.timeCondition"
                 >
                 </voip-time-condition-slot>
             </div>
