--- a/packages/manager/apps/telecom/src/components/telecom/telephony/scheduler/scheduler.html
+++ b/packages/manager/apps/telecom/src/components/telecom/telephony/scheduler/scheduler.html
@@ -16,6 +16,7 @@
         <telephony-scheduler-filters
             data-ng-if="!$ctrl.loading.filters"
             data-ng-model="$ctrl.model.filters"
+            data-time-condition="$ctrl.timeCondition"
             data-telephony-scheduler-filters-on-change="$ctrl.onFiltersChange()"
         >
         </telephony-scheduler-filters>
