fix(msc-billing-tile): all renewal usecases
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/src/index.html
+++ b/packages/super-components/components/msc-billing-tile/src/index.html
@@ -38,16 +38,25 @@
             <msc-billing-tile
                 service-path="domain/agora3.ovh"
                 offer="agora3.ovh"
-                language="en-GB"
                 data-tracking="home:dashboard:product"
             >
             </msc-billing-tile>
 
-            <!-- Ended service -->
+            <!-- VPS Cancelled service / Ended -->
             <msc-billing-tile
                 service-path="vps/vps-37eb1a5a.vps.ovh.net"
                 offer="vps-37eb1a5a.vps.ovh.net"
                 data-tracking="home:dashboard:tuto"
+                language="en-GB"
+            >
+            </msc-billing-tile>
+
+            <!-- VPS Cancellation requested / Ends -->
+            <msc-billing-tile
+                service-path="vps/vps-9a706163.vps.ovh.net"
+                offer="vps-9a706163.vps.ovh.net"
+                data-tracking="home:dashboard:tuto"
+                language="en-GB"
             >
             </msc-billing-tile>
         </section>
