--- a/packages/manager/core/generator/app/templates/package.json.hbs
+++ b/packages/manager/core/generator/app/templates/package.json.hbs
@@ -23,10 +23,11 @@
   "dependencies": {
     "@ovh-ux/manager-core-api": "*",
     "@ovh-ux/manager-react-core-application": "*",
-    "@ovhcloud/ods-core": "^14.0.1",
-    "@ovhcloud/ods-stencil": "^14.0.1",
-    "@ovhcloud/ods-theme-blue-jeans": "^14.0.1",
-    "@ovhcloud/ods-theming": "^14.0.1",
+    "@ovhcloud/ods-components": "^15.0.0",
+    "@ovhcloud/ods-core": "^15.0.1",
+    "@ovhcloud/ods-stencil": "^15.0.1",
+    "@ovhcloud/ods-theme-blue-jeans": "^15.0.1",
+    "@ovhcloud/ods-theming": "^15.0.1",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.9.0",
     "bootstrap": "^5.3.0",
