--- a/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
+++ b/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
@@ -35,31 +35,55 @@
         data-translate="pci_project_new_payment_method_add_credit_card_explain_ovh_transaction"
     ></p>
     <!--Credit card info banner-->
-    <oui-message
-        class="text-justify"
-        data-type="info"
-        data-ng-if="$ctrl.model.paymentMethod.type.isCreditCard()"
-    >
-        <span
-            class="font-weight-bold"
-            data-translate="pci_project_new_payment_method_add_credit_card_info_part_1"
-        ></span>
-        <span
-            data-translate="pci_project_new_payment_method_add_credit_card_info_part_2"
-        ></span>
-    </oui-message>
+    <div data-ng-if="$ctrl.model.paymentMethod.type.isCreditCard()">
+        <p
+            data-translate="pci_project_new_payment_method_add_credit_card_selected_explain_generic_1"
+        ></p>
+        <p
+            data-translate="pci_project_new_payment_method_add_credit_card_selected_explain_generic_2"
+        ></p>
+        <oui-checkbox class="mt-4">
+            <oui-checkbox-label>
+                <span
+                    data-translate="pci_project_new_payment_method_add_credit_card_default_validation"
+                ></span>
+            </oui-checkbox-label>
+        </oui-checkbox>
+
+        <oui-message class="mt-4" type="info">
+            <span
+                data-translate="pci_project_new_payment_method_add_credit_card_default_validation_agreement"
+            ></span>
+        </oui-message>
+    </div>
 
     <!--PAYPAL charged tax info banner-->
-    <oui-message
-        class="text-justify"
-        data-type="warning"
+    <div
         data-ng-if="$ctrl.isDisplayablePaypalChargeBanner && $ctrl.model.paymentMethod.type.isPaypal()"
     >
-        <span
-            data-translate="pci_project_new_payment_method_add_warning_paypal_account"
-            data-translate-values="{ amount: ($ctrl.getPayPalChargeAmount() + $ctrl.customerCurrency) }"
-        ></span>
-    </oui-message>
+        <oui-message class="text-justify" data-type="warning">
+            <span
+                data-translate="pci_project_new_payment_method_add_warning_paypal_account"
+                data-translate-values="{ amount: ($ctrl.getPayPalChargeAmount() + $ctrl.customerCurrency) }"
+            ></span>
+        </oui-message>
+        <p
+            data-translate="pci_project_new_payment_method_add_info_paypal"
+            data-translate-values="{ paymentMethodSection: $ctrl.paymentSectionHref }"
+        ></p>
+        <oui-checkbox class="mt-4">
+            <oui-checkbox-label>
+                <span
+                    data-translate="pci_project_new_payment_method_add_credit_card_default_validation"
+                ></span>
+            </oui-checkbox-label>
+        </oui-checkbox>
+        <oui-message class="mt-4" type="info">
+            <span
+                data-translate="pci_project_new_payment_method_add_credit_card_default_validation_agreement"
+            ></span>
+        </oui-message>
+    </div>
 
     <!--BANK-ACCOUNT info banner-->
     <div data-ng-if="$ctrl.model.paymentMethod.paymentType !== 'CREDIT'">
@@ -71,15 +95,6 @@
                 data-translate="pci_project_new_payment_method_add_warning_bank_account"
             ></span>
         </oui-message>
-
-        <p>
-            <small
-                data-ng-if="$ctrl.model.paymentMethod && !$ctrl.model.paymentMethod.type.isCreditCard()"
-                data-translate="{{ 'pci_project_new_payment_method_add_info_' + $ctrl.model.paymentMethod.paymentType.toLowerCase() }}"
-                data-translate-values="{ paymentMethodSection: $ctrl.paymentSectionHref }"
-            >
-            </small>
-        </p>
     </div>
 
     <!--SEPA banner info-->
@@ -87,25 +102,32 @@
         class="text-justify"
         data-ng-if="$ctrl.model.paymentMethod.type.isSepaDirectDebit()"
     >
-        <!--Description-->
         <p
-            data-translate="pci_project_new_payment_method_add_info_sepa_direct_debit_main_info"
+            data-translate="pci_project_new_payment_method_add_info_sepa_direct_debit_redirect_warn"
             data-translate-values="{ break: '<br>' }"
         ></p>
-
-        <!--Redirection to Worldline banner info-->
-        <oui-message data-type="warning">
-            <span
-                data-translate="pci_project_new_payment_method_add_info_sepa_direct_debit_redirect_warn"
-                data-translate-values="{ break: '<br>' }"
-            ></span>
+        <oui-message type="info" class="text-justify">
+            <p
+                class="mb-0"
+                data-translate="pci_project_new_payment_method_sepa_direct_debit_data_processing_info"
+            ></p>
+            <p
+                class="mb-0"
+                data-translate="pci_project_new_payment_method_add_sepa_direct_debit_digital_signature_info"
+            ></p>
         </oui-message>
 
-        <!--Data collect banner info-->
-        <oui-message data-type="info">
+        <oui-checkbox class="mt-4">
+            <oui-checkbox-label>
+                <span
+                    data-translate="pci_project_new_payment_method_add_credit_card_default_validation"
+                ></span>
+            </oui-checkbox-label>
+        </oui-checkbox>
+
+        <oui-message class="mt-4" type="info">
             <span
-                data-translate="pci_project_new_payment_method_add_info_sepa_direct_debit_collect_data_info"
-                data-translate-values="{ break: '<br>' }"
+                data-translate="pci_project_new_payment_method_add_credit_card_default_validation_agreement"
             ></span>
         </oui-message>
     </div>
